--- a/NPC妊娠・子種管理/変更点.md
+++ b/NPC妊娠・子種管理/変更点.md
@@ -1,6 +1,10 @@
 細かい変更点やバグ報告などはgithubを参照してください
 https://github.com/sakano/raizin7mod
 
+ver.1.2
+================================================================================
+- 妃・妾無しの時に在野ではなく他勢力の仕官を妾にしていたので修正
+
 ver.1.1
 ================================================================================
 - 子種管理を入れても特定の条件下で一般子種が枯渇していたのを修正しました
